2007-03-05  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: correct version numbers
	* strinet.spec.in: do not release source package

2007-03-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* debian/copyright: updates for release
	* doc/manual/news.texi: updates for release

	* strinet.spec.in: do not propagate empty flags
	* debian/rules.in: do not propagate empty flags

2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/manual/news.texi: updates for release

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/descrip.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/prerequisites.texi: updates and corrections
	* doc/manual/releases.texi: updates and corrections
	* doc/manual/strinet.texi: updates and corrections
	* doc/manual/todo.texi: updates and corrections
	* doc/manual/tree.texi: updates and corrections

2007-02-12  Brian Bidulock  <bidulock@openss7.org>

	* strinet.spec.in: support for autoconf 2.61
	* configure.ac: support for autoconf 2.61
	* .cvsignore: support for autoconf 2.61
	* debian/mscript_header.in: support for autoconf 2.61
	* debian/rules.in: support for autoconf 2.61
	* doc/manual/news.texi: support for autoconf 2.61
	* doc/manual/texi/install.texi: support for autoconf 2.61
	* m4/devfs.m4: support for autoconf 2.61
	* m4/openss7.m4: support for autoconf 2.61
	* m4/streams.m4: support for autoconf 2.61
	* scripts/texi/install.texi: support for autoconf 2.61
	* tests/atlocal.in: support for autoconf 2.61

2007-02-10  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: fixed missing spinlock symbols
	* src/drivers/tcp.c: fixed missing spinlock symbols
	* src/drivers/udp.c: fixed missing spinlock symbols